--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "API RESTful para gestão de alunos",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.6.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "mongoose": "^7.5.0"
   }
 }
