--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "mock-server",
-  "version": "1.0.0",
-  "description": "Mock API server for alunos management",
   "scripts": {
-    "start": "json-server --watch ../mock-data/bd.json --port 3000"
+    "start": "json-server --watch ../mock-data/bd.json --port 3001"
   },
-  "dependencies": {
-    "json-server": "^0.17.0"
+  "devDependencies": {
+    "json-server": "^0.17.3"
   }
 }
