--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "mock-server",
+  "version": "1.0.0",
   "scripts": {
     "start": "json-server --watch ../mock-data/bd.json --port 3001"
   },
