--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://ruimiranda371:ruimiranda2005@cluster0.ahcg47w.mongodb.net/escola?retryWrites=true&w=majority&appName=Cluster0
+VITE_API_URL=https://trab1-restapi-ruimiranda662.onrender.com
